--- a/question1.ipynb
+++ b/question1.ipynb
@@ -54,14 +54,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['PassengerId', 'Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Fare',\n",
+      "       'Embarked'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "# You solution goes here\n",
     "# you are encouraged to use multiple cells in the notebook\n",
-    "\n"
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "traindata = pd.read_csv('train.csv')\n",
+    "testdata = pd.read_csv('test.csv')\n",
+    "\n",
+    "X = traindata.drop('Survived', axis = 1)\n",
+    "y = traindata['Survived']\n",
+    "\n",
+    "print(X.columns)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# encoding categorical features\n",
+    "\n",
+    "\n",
+    "from sklearn.preprocessing import OrdinalEncoder, OneHotEncoder\n",
+    "\n",
+    "onehot_enc = OneHotEncoder()\n",
+    "X_encoded = onehot_enc.fit_transform(X[['Sex', 'Embarked']]).toarray()\n",
+    "\n",
+    "column_names = onehot_enc.get_feature_names_out(['Sex', 'Embarked'])\n",
+    "X_encoded_df = pd.DataFrame(X_encoded, columns=column_names)\n",
+    "\n",
+    "\n",
+    "X.drop(['Sex', 'Embarked'], axis = 1, inplace = True)\n",
+    "\n",
+    "ord_enc = OrdinalEncoder()\n",
+    "X['Pclass'] = ord_enc.fit_transform(X[['Pclass']])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# splitting data to train and test sets\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "prediction = model.predict(X_test)\n",
+    "prediction = np.round(prediction)\n",
+    "\n",
+    "prediction_file = pd.DataFrame({'PassengerId': X_test['PassengerId'], 'Survived': prediction})\n",
+    "prediction_file.to_csv('titanic_predictions.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
